# reivaj-core-adk

./: .gitignore  pyproject.toml
agents/: pyproject.toml
agents/academic_research/: README.md  pyproject.toml
agents/academic_research/tests/: test_agents.py
agents/bidi_demo/: README.md  agent.py  pyproject.toml
agents/bidi_demo/app/: health.py  main.py
agents/blog_writer/eval/: test_eval.py
agents/blog_writer/tests/: test_agent.py
agents/data_engineering/: README.md  pyproject.toml
agents/data_engineering/deployment/: deploy.py
agents/data_engineering/tests/: test_agents.py
agents/data_science/: README.md  pyproject.toml
agents/google_trends_agent/: README.md  pyproject.toml
agents/realtime_conversational_agent/: README.md  agent.py
agents/root_adk2_task_to_workflow/: .env.example  AGENTS.md  DESIGN_SPEC.md  README.md  agent.py  pyproject.toml
agents/root_adk2_task_to_workflow/app/: __init__.py  agent.py
agents/root_adk2_task_to_workflow/app/task_splitter/: __init__.py  prompts.py  registry_review.py  schemas.py  workflow_nodes.py
agents/root_adk2_task_to_workflow/tests/unit/: test_agent_graph.py  test_workflow_nodes.py
agents/root_adk_task_to_workflow/: AGENTS.md  README.md  agent.py  eval_test_web_search.evalset.json  pyproject.toml
agents/root_adk_task_to_workflow/app/: agent.py  tests_to_eval_root_adk_task_to_workflow.evalset.json
agents/root_adk_task_to_workflow/app/app_utils/: telemetry.py  typing.py
agents/root_adk_task_to_workflow/app/task_splitter/: logic.py  prompts.py  schemas.py  workflow_agents.py
agents/root_adk_task_to_workflow/tests/integration/: test_agent.py  test_agent_runtime_app.py
agents/root_adk_task_to_workflow/tests/unit/: test_agent_graph.py  (+1 more)
agents/root_deep_web_research/: .env.example  README.md  __init__.py  agent.py  config.py  nodes.py  schemas.py  search_agents.py
agents/root_deep_web_research/tests/: __init__.py
agents/short_movie_agents/: README.md  agent.py  pyproject.toml
agents/short_movie_agents/app/: server.py
agents/workflow_concurrent_research_writer/: pyproject.toml
agents/youtube_analyst/: README.md  pyproject.toml
agents/youtube_analyst/deployment/: deploy-to-agent-engine.sh  deploy-to-cloud-run.sh  deploy-to-gemini-enterprise.sh
registry/: README.md  (+5 more)
(+63 files in other folders)
