[project]
name = "reivaj-agents"
version = "0.1.0"
description = "Container project for running the ADK web playground across local agents."
requires-python = ">=3.12,<3.14"
dependencies = [
    "google-adk>=2.0.0b1",
]

[tool.uv]
package = false

[tool.agents-cli]
name = "reivaj-agents"
description = "Multi-agent ADK playground container."
agent_directory = "root_deep_web_research"
acli_version = "0.1.3"

[tool.agents-cli.create_params]
deployment_target = "none"
session_type = "in_memory"
cicd_runner = "skip"
include_data_ingestion = false
is_a2a = false
datastore = "none"
