[project]
name = "root_adk2_task_to_workflow"
version = "0.1.0"
description = "Reference ADK 2.0 Workflow agent for turning implementation requests into workflow plans."
authors = [
    {name = "Reivaj", email = "reivaj@example.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk>=2.0.0b1",
    "google-auth>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0b1",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.agents-cli]
name = "root_adk2_task_to_workflow"
description = "Reference ADK 2.0 graph Workflow implementation planner."
base_template = "adk"
agent_directory = "app"
generated_at = "2026-05-14T00:00:00+00:00"
acli_version = "0.1.3"

[tool.agents-cli.create_params]
deployment_target = "none"
session_type = "in_memory"
cicd_runner = "skip"
include_data_ingestion = false
is_a2a = false
datastore = "none"
agent_guidance_filename = "AGENTS.md"
